syntax = "proto3";

package podmsgenriched;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option java_outer_classname = "MazuRecordEnriched";

message PodMessageEnriched {
    string pod_name = 1;
    string job_name = 2;

    int64 start_time = 3;
    int64 end_time = 4;

    int64 cpu_requested = 5 [(gogoproto.jsontag) = "cpu_requested"]; // CPU - MilliValue
    int64 gpu_requested = 6 [(gogoproto.jsontag) = "gpu_requested"]; // GPU - MilliValue
    int64 memory_requested = 7 [(gogoproto.jsontag) = "memory_requested"]; // Memory - Value

    double cpu_cost = 8;
    double gpu_cost = 9;
    double memory_cost = 10;
    double dominant_cost = 11;

    string owner = 12;
    string asset = 13;
    string team = 14;
    string organization = 15;
    string atgslt = 16;
    string instance_type = 17;
    string pricing_model = 18;
    string cluster = 19;
}

