syntax = "proto3";

package podmsgraw;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option java_outer_classname = "MazuRecordRaw";

// The PodMessageRaw containing message sending to API Gateway => Kinesis DS => Kinesis FH => S3
message PodMessageRaw {
    string pod_name = 1;
    int64 start_time = 2;
    int64 end_time = 3;
    int64 cpu_requested = 4; // CPU - MilliValue
    int64 gpu_requested = 5; // GPU - MilliValue
    int64 memory_requested = 6; // Memory - Value
    map<string, string> labels = 7;
    int64 ingestion_time = 8; // data ingestion time
}


